chat/001-synapse/006-synapse-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse
  namespace: matrixorg
spec:
  selector:
    matchLabels:
      service: synapse
  serviceName: synapse
  template:
    metadata:
      labels:
        service: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest
          ports:
            - containerPort: 8443
              name: federation
          volumeMounts:
            - name: synapse-data
              mountPath: /data
            - name: synapse-config
              mountPath: /config
            - name: synapse-secrets
              mountPath: /secrets
      volumes:
        - name: synapse-secrets
          secret:
            secretName: synapse-secrets
        - name: synapse-config
          configMap:
            name: synapse-config
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-data
