chat/001-synapse/008-synapse-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: synapse
  namespace: matrixorg
spec:
  entryPoints: 
    - synapse
  routes:
  - match: Host(`matrix.frikanalen.no`) 
    kind: Rule
    services:
    - kind: Service
      name: synapse
      namespace: matrixorg
      scheme: http
      port: 8443
  tls:
    certResolver: default
